fix: bad contrast on mobile

--- a/nanovni/styles.css
+++ b/nanovni/styles.css
@@ -567,7 +567,7 @@ screen and (max-width: 800px) {
 
   #titre_sg {
     overflow: visible;
-    margin-top: 40vh;
+    margin-top: 38vh;
     margin-bottom: 4rem;
     font-size: 6rem;
     border-radius: 1rem;
@@ -578,7 +578,7 @@ screen and (max-width: 800px) {
   #danger_msg_ctnr {
     font-size: 2.8rem;
     padding: 3rem;
-    margin-top: 10rem;
+    margin-top: 6rem;
     margin-bottom: 20rem;
     line-height: 4rem;
   }
